# vocast

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pr-automation.yml
config/: pipeline.yaml  region_rules.yaml  train_targets.yaml  voices.yaml  룰.txt
docs/: GITHUB_AUTOMATION.md
input/: 20260701_sample.csv
models/: models.yaml
rvc_stack/: README.md  rvc_train  train_rvc.py
scripts/: build_manifest.py  export_corpus_texts.py  generate_banner.py  measure_target_f0.py  merge_batches.py  rebuild_metadata.py  run_worker.py  setup_rvc_stack.sh  synth_corpus.py  train_pipeline.sh  train_rvc.py
scripts/sbatch/: train_rvc.sbatch
src/vocast/: __init__.py  audio.py  csv_reader.py  env.py  manifest.py  paths.py  region_rules.py  worker.py
src/vocast/export/: layout.py  metadata.py
src/vocast/rvc/: adaptive.py  blend.py  engine.py  registry.py
src/vocast/train/: corpus.py  register.py  runner.py
src/vocast/tts/: synthesize.py
tests/: test_config.py  test_metadata.py
